# scenescape

./: .gitignore  Makefile  common.mk  deploy.sh  run-profiling.sh
.github/resources/: coverity-requirements.txt  requirements.txt
.github/workflows/: tests-bat.yml
autocalibration/: Dockerfile
autocalibration/src/: polycam_to_images.py
autocalibration/src/reloc/: requirements.txt
controller/: Dockerfile  requirements-runtime.txt
controller/src/controller/: detections_builder.py  ilabs_tracking.py  scene.py  tracking.py
controller/src/robot_vision/: CMakeLists.txt  setup.cfg  setup.py
controller/src/robot_vision/benchmarks/: .gitignore  CMakeLists.txt  MultipleObjectTrackerBenchmark.cpp  README.md  build_benchmark.sh  compare_benchmarks.sh  run_benchmark.sh
controller/src/robot_vision/src/rv/tracking/: ObjectMatching.cpp  TrackManager.cpp
controller/src/schema/: metadata.schema.json
controller/tools/tracker/: tracking_debug.py
dlstreamer-pipeline-server/: queuing-config-reid.json  queuing-config.json  retail-config-reid.json  retail-config.json
dlstreamer-pipeline-server/user_scripts/: DeepScenario.py
dlstreamer-pipeline-server/user_scripts/gvapython/sscape/: car_license_plate_utils.py  sscape_3d_detector.py  sscape_adapter.py  sscape_utils.py
docs/user-guide/: How-to-run-LPR-with-3D-object-detection.md
docs/user-guide/api-docs/: api.yaml
kubernetes/scenescape-chart/templates/: all-pvc.yaml  camcalibration-dep.yaml  ntp-dep.yaml  scene-dep.yaml  web-dep.yaml
manager/: Dockerfile
manager/src/django/: forms.py  models.py  serializers.py  validators.py
manager/src/static/js/: scenescape3d.js
manager/src/static/js/thing/: scenecamera.js
manager/src/templates/scene/: scene_update.html
sample_data/: docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml  docker-compose-example.yml
scene_common/src/scene_common/: mesh_util.py  scene_model.py
tests/: Makefile  Makefile.functional  Makefile.user_interface
tests/compose/: scene.yml  scene_no_ntp.yml  scene_reid.yml
tests/compose/dlstreamer/: queuing_video.yml  queuing_video_no_ntp.yml  queuing_video_reid.yml  retail_video.yml  retail_video_no_ntp.yml  retail_video_reid.yml
tests/functional/: tc_geospatial_ingest_publish.py
